Migration to m2e 2.x
Signed-off-by: Fred Bricon <fbricon@gmail.com>