@@ -18,14 +18,14 @@
 
   <groupId>org.jboss.tools.m2e.wro4j</groupId>
   <artifactId>org.jboss.tools.m2e.wro4j.parent</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>M2E connector for WRO4J :: Parent </name>
   <properties>
-    <tycho-version>0.20.0</tycho-version>
+    <tycho-version>2.7.4</tycho-version>
     <tycho-extras-version>${tycho-version}</tycho-extras-version>
     <test.timeout>600</test.timeout><!--  10 mins -->       
-    <tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
+    <tycho.test.jvmArgs>-Xmx512m</tycho.test.jvmArgs>
     <tycho.scmUrl>scm:git:https://github.com/jbosstools/m2e-wro4j.git</tycho.scmUrl>
   </properties>
 
@@ -39,30 +39,25 @@
     
   <repositories>
     <repository>
-      <id>rso</id>
-      <url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
-    </repository>
-
-    <repository>
-      <id>kepler</id>
+      <id>eclipse</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/releases/kepler</url>
+      <url>https://download.eclipse.org/releases/2022-09/</url>
     </repository>
 
     <repository>
       <id>m2e</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/technology/m2e/milestones/1.5</url>
+      <url>https://download.eclipse.org/technology/m2e/releases/2.0.4/</url>
     </repository>
     <repository>
       <id>m2e-wtp</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/m2e-wtp/releases/kepler/1.0.0/</url>
+      <url>https://download.eclipse.org/m2e-wtp/releases/1.5.1/</url>
     </repository>
     <repository>
       <id>orbit</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20140525021250/repository/</url>
+      <url>https://download.eclipse.org/tools/orbit/downloads/drops/S20220726152247/repository/</url>
     </repository>
   </repositories>
 
@@ -81,7 +76,6 @@
         <version>${tycho-version}</version>
         <configuration>
           <resolver>p2</resolver>
-          <ignoreTychoRepositories>false</ignoreTychoRepositories>
         </configuration>
       </plugin>
     </plugins>
@@ -99,7 +93,6 @@
               <include>**/*Test.java</include>
             </includes>
             <argLine>${tycho.test.jvmArgs}</argLine>
-            <appArgLine>-pluginCustomization ${basedir}/plugin_customization.ini</appArgLine>
             <!-- kill test JVM it tests take more than ${test.timeout} seconds to finish -->
             <forkedProcessTimeoutInSeconds>${test.timeout}</forkedProcessTimeoutInSeconds>
           </configuration>
@@ -109,7 +102,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.6</version>
+          <version>3.3.0</version>
         </plugin>
         
 
@@ -143,7 +136,7 @@
         </os>
       </activation>
       <properties>
-        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -XstartOnFirstThread</tycho.test.jvmArgs>
+        <tycho.test.jvmArgs>-Xmx800m -XstartOnFirstThread</tycho.test.jvmArgs>
       </properties>
       <build>
         <pluginManagement>
@@ -156,7 +149,7 @@
                 <dependencies>
                   <dependency>
                     <artifactId>org.eclipse.jdt.launching.macosx</artifactId>
-                    <version>3.2.100</version>
+                    <version>0.0.0</version>
                     <type>eclipse-plugin</type>
                   </dependency>
                 </dependencies>
